# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  docker-compose.yml  get-pip.py  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: coverage.yml  hexlet-check.yml  my_workflow.yml
code/: pyproject.toml  ruff.toml
code/gendiff/: gendiff.py
code/gendiff/formatters/: plain.py
code/gendiff/scripts/: gendiff.py
code/tests/: test_diff_json.py  test_flat_diff_json.py  test_flat_diff_yaml.py  test_nested_diff_json.py  test_nested_diff_yml.py  test_plain_json.py  test_plain_yml.py
gendiff/: __init__.py  differ.py  file_reader.py  gendiff.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: differ.py  file_reader.py  gendiff.py
hexlet_code/: file_reader.py  gendiff.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
hexlet_code/scripts/: gendiff.py
tests/: test_diff_json.py  test_flat_diff.py  test_flat_diff_json.py  test_flat_diff_yaml.py  test_nested_diff.py  test_nested_diff_json.py  test_nested_diff_yml.py  test_plain_json.py  test_plain_yml.py
tests/test_data/: expected_stylish.txt
